--- a/config_col.html
+++ b/config_col.html
@@ -14,32 +14,17 @@
  <div class="item-container">
   <div class="item-container-header">Configurable items</div>
   <div class="item-container-content">
-    <label class="item">
-     Time display
-     <label class="item">
-      <span style="vertical-align:middle">   Digital</span>
-      <input name="digital" value="1" type="radio" class='item-radio' checked>
-     </label>
-     <label class="item">
-      <span style="vertical-align:middle">   Analog</span>
-      <input name="digital" value="0" type="radio" class='item-radio'>
-     </label>
+    <label class='item'>
+     Background Color
+     <input id='bgColorPicker' type='text' class='item-color item-color-sunny' value='#000000'>
     </label>
     <label class='item'>
-     Foreground Color
-     <input id='numColorPicker' type='text' class='item-color item-color-sunny' value='#FFFFFF'>
+     Minute & Border Color
+     <input id='minColorPicker' type='text' class='item-color item-color-sunny' value='#FFFFFF'>
     </label>
-    </label>
-    <label class="item">
-     Date display
-     <label class="item">
-      <span style="vertical-align:middle">  MM/DD</span>
-      <input name="datemode" value="0" type="radio" class='item-radio' checked>
-     </label>
-     <label class="item">
-      <span style="vertical-align:middle">  DD/MM</span>
-      <input name="datemode" value="1" type="radio" class='item-radio'>
-     </label>
+    <label class='item'>
+     Hour Color
+     <input id='hourColorPicker' type='text' class='item-color item-color-sunny' value='#FFFFFF'>
     </label>
   </div>
   <div class='item-container-footer'>
