--- a/config_col.html
+++ b/config_col.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
  <meta charset="UTF-8">
- <title>Duo Settings</title>
+ <title>Soto X Settings</title>
  <link rel='stylesheet' type='text/css' href='slate.min.css'>
  <link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <body>
  <div class='item-container'>
-  <h1 class='title'>Duo Watchface</h1>
+  <h1 class='title'>Soto X Watchface</h1>
  </div>
  
  <div class="item-container">
