--- a/config_col.html
+++ b/config_col.html
@@ -19,7 +19,7 @@
      <input id='bgColorPicker' type='text' class='item-color item-color-sunny' value='#000000'>
     </label>
     <label class='item'>
-     Minute & Border Color
+     Minute and Border Color
      <input id='minColorPicker' type='text' class='item-color item-color-sunny' value='#FFFFFF'>
     </label>
     <label class='item'>
