--- a/config_col.html
+++ b/config_col.html
@@ -26,6 +26,7 @@
      Hour Color
      <input id='hourColorPicker' type='text' class='item-color item-color-sunny' value='#FFFFFF'>
     </label>
+   </label>
   </div>
   <div class='item-container-footer'>
    <br>Settings only change on the watch after you click Submit.
