--- a/config_col.html
+++ b/config_col.html
@@ -44,7 +44,7 @@
   </div>
  </div>
 
- <script src='slate_reduced.min.js'></script>
+ <script src='slate.min.js'></script>
  <script src='main_col.js'></script>
 </body>
 </html>
